# chatterbox

./: .gitignore  README.md  STRUCTURE.md  TODO.md  pyproject.toml  setup.sh
config/: momo.toml
docs/: architecture.md  dependencies.md  troubleshooting.md  usage.md
src/chatterbox/: __main__.py  config.py  pipeline.py  state.py
src/chatterbox/audio/: mic.py  speaker.py  vad.py
src/chatterbox/llm/: context.py  engine.py
src/chatterbox/stt/: transcriber.py
src/chatterbox/tts/: synthesizer.py
tests/: test_context.py  test_smoke.py  test_state.py
